--- a/views/light.hbs
+++ b/views/light.hbs
@@ -1,11 +1,8 @@
 <div class="row">
-    <div class="six columns">
+    <div class="container center">
         <form method="post" action="/light">
-            <h1>light switch</h1>
-            On  <input type="radio" name="status" value="on">
-            Off <input type="radio" name="status" value="off">
-            Blink <input type="radio" name="status" value="blink">
-            <input class="button-primary" type="submit" value="Light switch">
+          <input type='text'placeholder='username' id='username'/>
+          <a href='/transaction' class='btn'>Login</a>
         </form>
     </div>
 </div>
